--- a/CD/LaTeX/DP_pasovska.tex
+++ b/CD/LaTeX/DP_pasovska.tex
@@ -1065,49 +1065,50 @@ V rámci této práce jsou pro ukázku vybrána jen některá srovnání. Více 
 Pro webovou stránku byla vytvořena vlastní doména \textit{https://www.otava-strakonice.com/}. Na webových stránkách se stále pracuje a předpokládá se, že fotogalerie a srovnávací fotodokumentace se budou nadále rozšiřovat.
 
 \chapter{Diskuze}
-V současné době je velký zájem o historii a její porovnání s aktuálním stavem. Tato skutečnost lze vidět i na vyhotovených pracích. Za zmínku jistě stojí diplomová práce od Adély Dykastové  \cite{dykastova}, která zpracovávala historické mapové podklady a modelovala objekty pro město Kadaň. V této práci byla zvolena rozsáhlejší oblast, a to oblast středního Pootaví, tedy od Horažďovic po Strakonice. Tato oblast má, stejně jako město Kadaň, bohatou historii. Zpracování podkladových dat probíhalo obdobným způsobem, rastry byly georeferencovány na podkladech katastrálních map, aby při následné vizualizaci ve webových mapových aplikacích nebyly výrazné rozdíly. Vzhledem k malé oblasti mohla Adéla Dykastová vektorizovat objekty více typů a porovnávat jejich vývoj v rámci různých časových období. V případě rozšíření této práce by tato možnost byla zajisté vítána. Mohl by být porovnán vývoj krajiny, jak se změnil podíl orné půdy, lesů a luk na úkor zástavby. Při takto vytvořených prvcích by bylo následně také možné vypočítat koeficient ekologické stability, jenž udává poměr stabilních a nestabilních ekosystémů. Pomocí tohoto koeficientu lze zhodnotit, zda je území hojně využívané a přírodní struktury jsou narušené, či se jedná o přírodní krajinu s nízkou intenzitou využití člověkem. 
+V současné době je velký zájem o historii a její porovnání s aktuálním stavem. Tuto skutečnost lze vidět i na vyhotovených pracích. Za zmínku jistě stojí diplomová práce od Adély Dykastové  \cite{dykastova}, která zpracovávala historické mapové podklady a modelovala objekty pro město Kadaň. V mé práci byla zvolena rozsáhlejší oblast, a to oblast středního Pootaví, tedy od Horažďovic po Strakonice. Tato oblast má, stejně jako město Kadaň, bohatou historii. Zpracování podkladových dat probíhalo obdobným způsobem, rastry byly georeferencovány na podkladech katastrálních map, aby při následné vizualizaci ve webových mapových aplikacích nebyly výrazné rozdíly. Vzhledem k malé oblasti mohla Adéla Dykastová vektorizovat objekty více typů a porovnávat jejich vývoj v rámci různých časových období. V případě rozšíření této práce by tato možnost byla zajisté vítána. Mohl by být porovnán vývoj krajiny, jak se změnil podíl orné půdy, lesů a luk na úkor zástavby. Při takto vytvořených prvcích by bylo následně také možné vypočítat koeficient ekologické stability, jenž udává poměr stabilních a nestabilních ekosystémů. Pomocí tohoto koeficientu lze zhodnotit, zda je území hojně využívané a přírodní struktury jsou narušené, či se jedná o přírodní krajinu s nízkou intenzitou využití člověkem. 
 
-V práci byla zadaná oblast modelována z dat SMO–5, stejný způsob tvorby využila i Adina Slívová ve své diplomové práci \cite{adina}, v níž se zaměřila na oblast historického údolí Slap. Ve své práci narazila na několik problémů týkajících se špatně přiřazené nadmořské výšky vrstevnice či chybějícímu přesnému umístění výškové kóty. Rastry použité pro tuto práci naštěstí žádný obdobný problém neobsahovaly, přesto byla při vektorizaci zvýšená obezřetnost. V rámci této práce byly vyzkoušeny všechny způsoby tvorby vrstevnic, aby byl vybrán ten nejefektivnější, neboť bylo nutné zvektorizovat vrstevnice pro velké území. Nejvhodnější způsob byla poloautomatická tvorba vrstevnic. Při automatické tvorbě byly zvektorizovány i objekty, které s vrstevnicemi nemají nic společného, a tyto objekty bylo nutné následně důkladně prozkoumat a odstranit. 
-
-Součástí výstupů této práce jsou i mapy měst, kterými Otava protéká.  O~výstupy této práce projevila zájem Šmidingerova knihovna ve Strakonicích, se kterou se momentálně jedná o možnosti vystavení map v prostorách vstupní haly knihovny na Strakonickém hradě. 
-
-Součástí práce byla tvorba generalizovaného 3D modelu Strakonického hradu. Jedná se o rozsáhlý, členitý a velmi složitý komplex. Na hradě se snoubí téměř všechny architektonické styly od románského po barokní. V této práci je model využit pro dokreslení rázu krajiny, z~toho důvodu byl hrad generalizován. Dalším z důvodů výrazné generalizace byla paměťová náročnost programu CityEngine. Tento program má při nahrávání komplikovaných staveb problémy se zobrazením textur. Tento problém se nevyhnul ani Strakonickému hradu, u nějž se přes několik oprav nepodařilo vykreslit texturu hradní věže Rumpál. Navíc bylo pro publikování nutné odstranit textury z jižní strany hradu, které po importu do softwaru CityEngine byly náhodně rozmístěny po~celém objektu.
+V práci byla zadaná oblast modelována z dat SMO–5, stejný způsob tvorby využila i Adina Slívová ve své diplomové práci \cite{adina}, v níž se zaměřila na oblast historického údolí Slap, kde narazila na několik problémů týkajících se špatně přiřazené nadmořské výšky vrstevnice či chybějícímu přesnému umístění výškové kóty. Rastry použité pro tuto práci naštěstí žádný obdobný problém neobsahovaly, přesto bylo nutné při vektorizaci dbát zvýšené obezřetnosti. V~rámci této práce byly vyzkoušeny všechny způsoby tvorby vrstevnic, aby byl zvolen ten nejefektivnější, neboť bylo nutné zvektorizovat vrstevnice pro velké území. Nejvhodnější způsob byla vybrána poloautomatická tvorba vrstevnic. Při automatické tvorbě byly zvektorizovány i objekty, které s vrstevnicemi nemají nic společného. Objekty, které po přezkoumání nesouvisely s vrstevnicemi, byly odstraněny.
 
 
+Výsledky této práce obsahují i mapy měst, kterými Otava protéká.  O~výstupy této práce projevila zájem Šmidingerova knihovna ve Strakonicích, se kterou se momentálně jedná o možnosti vystavení map v prostorách vstupní haly knihovny na Strakonickém hradě. 
 
-Vytvoření konkrétního objektu dodá oblasti na autentičnosti a vizuálně blíže přiblíží dané prostředí. Dle mapových podkladů se v oblasti nachází více významných budov, ať už se jedná o~kostely či například o~zámek Střelu. Součástí práce by do budoucna mohlo být rozšíření o vytvořené 3D modely těchto významných staveb. 
+Součástí práce byla tvorba generalizovaného 3D modelu Strakonického hradu. Jedná se o složitý komplex z důvodu rozlohy a členitosti. Na hradě se snoubí téměř všechny architektonické styly od románského po barokní. V~této práci je model využit pro dokreslení rázu krajiny. Hrad není hlavním tématem práce, proto byl generalizován. Dalším z důvodů výrazné generalizace byla paměťová náročnost programu CityEngine. Tento program má při nahrávání komplikovaných staveb problémy se zobrazením textur. Tento problém se nevyhnul ani Strakonickému hradu, u nějž se přes několik oprav nepodařilo vykreslit texturu hradní věže Rumpál. Navíc bylo pro publikování nutné odstranit textury z jižní strany hradu, které po importu do softwaru CityEngine byly náhodně rozmístěny po~celém objektu.
+
+
+Vytvoření konkrétního objektu dodá oblasti na autentičnosti a vizuálně blíže přiblíží dané prostředí. Dle mapových podkladů se v oblasti nachází více významných budov, ať už se jedná o~kostely či například o~zámek Střelu. Do budoucna by práce mohla být rozšířena o 3D modely těchto významných staveb. 
 
 Při publikování dat ze softwaru CityEngine docházelo k problému s umístěním objektů. Přestože objekty v programu CityEngine měly totožné půdorysy s podkladovou  mapou, po publikování jsou objekty zhruba o 10 m posunuté. Na vině bude zřejmě vnitřní transformace, neboť surová data jsou v systému S-JTSK Krovak East North a ArcGIS Online data zobrazuje v systému Web Mercator. Tento problém byl konzultován s vedoucím práce, ale bohužel se jej nepodařilo odstranit. 
 
-Neopomenutelnou součástí práce byl také sběr historických fotografií a~jejich porovnání s aktuálním stavem. Velké množství fotografií znázorňuje Strakonice, za uvážení by jistě stálo důkladnější prozkoumání archivů zbylých měst a rozšíření fotodokumentace o tyto fotografie. Zároveň by jistě bylo vhodné rozšířit fotogalerii o fotografie pořízené dronem. Tímto způsobem by bylo možné zmapovat větší část řeky.
+Při práci byl prováděn také sběr historických fotografií a~jejich porovnání s~aktuálním stavem. Velké množství fotografií znázorňuje Strakonice, za uvážení by jistě stálo důkladnější prozkoumání archivů zbylých měst a rozšíření fotodokumentace o tyto fotografie. Zároveň by jistě bylo vhodné rozšířit fotogalerii o fotografie pořízené dronem. Tímto způsobem by bylo možné zmapovat větší část řeky.
 
-Řeka byla ústředním tématem této práce. Za tímto účelem byly detailně prozkoumány a prostudovány materiály týkající se hydrologie, přestože v práci byly zmíněny jen okrajově. Hydrologie je velmi zajímavá věda a je úzce spjata s ekologií, která je v dnešní době často diskutovaná. Obzvláště v oblasti středního Pootaví se poblíž hydrologických objektů vyskytuje chráněná fauna a~flóra, některé z oblastí jsou součástí soustavy NATURA 2000. Ta spravuje evropsky významné lokality. Mezi tyto lokality patří například Kozlovská stráň, kde byl zaznamenán výskyt hořečku mnohotvarého, pastvina u Přešťovic spadající pod obec Slaník s bohatou květenou a obec Štěkeň, v níž se vyskytuje tesařík obrovský. Nesmím opomenout zmínit Tůně u Hajské, ve kterých se nacházejí bývalé sejpy po rýžování zlata a v okolí roste vzácný druh žebratky bahenní. Byl zaznamenán i velký zájem veřejnosti o ekologii. V dubnu roku 2019 uspořádal Český svaz ochránců přírody pomoc obojživelníkům při jejich jarní migraci. Dle záznamů bylo zachráněno 967 jedinců, většina byly ropuchy obecné, ale v menší míře se vyskytl i čolek obecný, skokan hnědý či blatnice skvrnitá.
+Řeka byla ústředním tématem této práce. Za tímto účelem byly detailně prozkoumány a prostudovány materiály týkající se hydrologie, přestože v práci byly zmíněny jen okrajově. Hydrologie je velmi zajímavá věda a je úzce spjata s ekologií, která je v dnešní době často diskutovaná. Obzvláště v oblasti středního Pootaví se poblíž hydrologických objektů vyskytuje chráněná fauna a~flóra, některé z oblastí jsou součástí soustavy NATURA 2000. Ta spravuje evropsky významné lokality. Mezi tyto lokality patří například Kozlovská stráň, kde byl zaznamenán výskyt hořečku mnohotvarého, pastvina u Přešťovic spadající pod obec Slaník s bohatou květenou a obec Štěkeň, v níž se vyskytuje tesařík obrovský. Nesmím opomenout zmínit Tůně u Hajské, ve kterých se nacházejí bývalé sejpy po rýžování zlata a v okolí roste vzácný druh žebratky bahenní. V okolí Strakonic byl registrován zvyšující se zájem veřejnosti o ekologii, například v dubnu roku 2019 uspořádal Český svaz ochránců přírody pomoc obojživelníkům při jejich jarní migraci. Dle záznamů bylo zachráněno 967 jedinců, většina byly ropuchy obecné, ale v menší míře se vyskytli i čolek obecný, skokan hnědý či blatnice skvrnitá.
 
-Celkově je oblast velmi bohatá na přírodní památky. V prostředí Strakonicka se nachází mnoho památných stromů, několik přírodních studánek a přírodně krajinářsky významných lokalit. Při rozšíření práce by jistě stálo za úvahu detailnější prozkoumání těchto objektů a jejich prezentace formou webových aplikací.
-
-Přestože tvorbu práce doprovázely různé komplikace, podařilo se splnit cíl práce a prezentovat výstupy prostřednictvím webové stránky. Webová stránka je na pohled čistá a přehledná. Jako velké plus vidím možnost porovnání dobových fotografií s aktuálním stavem, navíc mnoho z použitých fotografií není veřejně dostupných. Webová stránka je k dispozici na adrese \textit{https://www.otava-strakonice.com/}. Stránka zároveň obsahuje interaktivní výstupy, které jsou součástí této práce.
-
-Velký důraz při práci byl kladen na samostatnost. Veškeré historické podklady od stavebních plánů hradu po sběr historických fotografií byl získán autorkou. Zároveň bylo pro potřebu fotodokumentace nutné získat aktuální snímky, které si autorka taktéž sama obstarala. Získání aktuálních fotografií výrazně ztěžovaly restaurátorské práce, při nichž byly po určitou dobu části hradu zakryty lešením. 
-
-Součástí práce bylo i porovnání vytvořeného 3D modelu krajiny s již existujícím. V rámci této části byla blíže prozkoumána funkce \textit{Topo to raster}, která nabízí celou řadu vstupů a výpočetních parametrů. Při bližším zkoumání terénu a detailnějším zpracování by se dala práce rozšířit o příkré svahy, čímž by se docílilo kvalitnějších výsledků. Do vstupu mohly být vkládány i liniové prvky znázorňující tok řeky či polygony obsahující výjimky, kde by byla data ignorována. Vzhledem k tomu, že vytvořený rastr rozdílů výšek může být nicneříkající, byl z programu ArcMap uložen i histogram, který lépe zobrazuje výškové rozdíly.
+Celkově je oblast velmi bohatá na přírodní památky. V prostředí Strakonicka se nachází mnoho památných stromů, několik přírodních studánek a~přírodně krajinářsky významných lokalit. Za zmínku stojí kadovský viklan nebo studánka Panny Marie v Předních Ptákovicích. Zmapování a zdokumentování těchto přírodních úkazů by mohlo posloužit jako téma pro rozšíření práce.
 
 
-Práce se sama o sobě zabývá velmi širokým tématem a zahrnuje velké území. Práci lze považovat za kvalitní zdroj při zpracování v prostředí ArcMap, neboť softwaru ArcMap je věnována velká část díla. Detailněji jsou popsány transformace, které se používají v ArcMapu při georeferencování. Velkým přínosem je také snaha o propojení několika různých softwarů a objektů z nich vypublikovaných.
+
+Přestože tvorbu práce doprovázely různé komplikace, podařilo se splnit cíl práce a prezentovat výstupy prostřednictvím webové stránky. Při tvorbě webové stránky jsem se snažila zachovat jednoduchý design. Jako velké plus vidím možnost porovnání dobových fotografií s aktuálním stavem. Webová stránka je k dispozici na adrese \textit{www.otava-strakonice.com}. Stránka zároveň obsahuje interaktivní výstupy, které jsou součástí této práce.
+
+
+Součástí práce bylo i porovnání vytvořeného 3D modelu krajiny s již existujícím modelem. V rámci této části byla blíže prozkoumána funkce \textit{Topo to~raster}, která nabízí celou řadu vstupů a výpočetních parametrů. Při detailnějším zkoumáním a zpracováváním by se dala práce rozšířit například o příkré svahy, čímž by se docílilo kvalitnějších výsledků. Mezi vstupy by mohly být vkládány i liniové prvky znázorňující tok řeky či polygony obsahující výjimky, kde by byla data ignorována. Vzhledem k tomu, že vytvořený rastr rozdílů výšek může být nicneříkající, byl z programu ArcMap uložen i histogram, který lépe zobrazuje výškové rozdíly.
+
+
+V práci jsem se zabývala velmi širokým tématem, které zahrnuje rozsáhlé území. Práci lze považovat za kvalitní zdroj při zpracování v prostředí ArcMap, neboť softwaru ArcMap je věnována velká část díla. V práci detailně popisuji transformace, které se používají v ArcMapu při georeferencování.
 
 
 
 
 
 \begin{conclusion}
-Hlavním cílem práce byla vizualizace území v údolí řeky Otavy v okolí Strakonic, doplnění o vytvořený objekt Strakonického hradu a sběr historických fotografií. Všechny výstupy byly následně prezentovány na vytvořených webových stránkách.
+Hlavním cílem práce byla vizualizace území v údolí řeky Otavy v okolí Strakonic, doplnění o vytvořený objekt Strakonického hradu a sběr historických fotografií. Všechny výsledky byly následně prezentovány na vytvořených webových stránkách.
 
-Stěžejní část práce spočívala v georeferencování císařských povinných otisků map stabilního katastru. Vzhledem k velikosti oblasti bylo nutné zgeoreferencovat celkem 59 rastrů. Je zde nutné podotknout, že se jedná o počet rastrů, nikoliv katastrálních území. Zgeoreferencované rastry byly následně ořezány a ukládány do vytvořené geodatabáze. Georeferencování bylo náročné, neboť bylo nutné kontrolovat nejen střední chybu, ale také návaznost jednotlivých listů, zejména návaznost vodního toku. Po zpracování císařských povinných otisků stabilního katastru byly stejným způsobem zgeoreferencovány rastry SMO–5. 
+Stěžejní část práce spočívala v georeferencování císařských povinných otisků map stabilního katastru. Vzhledem k velikosti oblasti bylo nutné zgeoreferencovat celkem 59 mapových listů. Je zde nutné podotknout, že se jedná o počet listů, nikoliv katastrálních území. Zgeoreferencované mapové listy byly následně ořezány a ukládány do vytvořené geodatabáze. Georeferencování bylo náročné, neboť bylo nutné kontrolovat nejen střední chybu, ale také návaznost jednotlivých listů. Zvláštní pozornost byla věnována návaznosti vodního toku. Po zpracování císařských povinných otisků stabilního katastru byly stejným způsobem zgeoreferencovány mapové podklady SMO–5. 
 
-Z podkladů císařských povinných otisků byly zvektorizovány vodní toky, budovy a lesy. Tato vrstva následně posloužila pro generování objektů v softwaru CityEngine, kde byla aplikována pravidla procedurálního modelování. Z~rastrů SMO–5 byly zvektorizovány vrstevnice a výškové kóty, které byly dále využity pro modelování krajiny. Vytvořená krajina byla porovnána s existujícím modelem krajiny DMR 5G. 
+Z podkladů císařských povinných otisků byly zvektorizovány vodní toky, budovy a lesy. Tyto vrstva následně posloužily pro generování objektů v softwaru CityEngine, kde byla aplikována pravidla procedurálního modelování. Z~mapových podkladů SMO–5 byly zvektorizovány vrstevnice a výškové kóty, které byly dále využity pro modelování krajiny. Vytvořená krajina byla porovnána s existujícím modelem krajiny DMR 5G. 
 
-Pro autentičnost byl vytvořen 3D model Strakonického hradu v programu SketchUp, který doplnil vytvořené modely krajiny. Model byl vytvářen generalizovaný a velké množství dílčích částí bylo vkládáno ve formě textur. 
+V programu SketchUp byl vytvořen 3D model Strakonického hradu, který dodává modelu krajiny na autentičnosti. Model hradu byl vytvářen generalizovaný a velké množství dílčích částí bylo vkládáno ve formě textur. 
 
-Výsledky ze softwaru CityEngine, ArcMap a ArcGIS Pro byly publikovány na server ArcGIS Online, kde byly pro interaktivní prohlížení vytvořeny webové mapové aplikace. Zároveň byla pro prezentování výsledků vytvořena webová stránka obsahující nejen výstupy, ale také stručnou historii měst a~vytvořenou srovnávací fotodokumentaci.
+Výsledky ze softwaru CityEngine, ArcMap a ArcGIS Pro byly publikovány na server ArcGIS Online, kde byly pro interaktivní prohlížení vytvořeny webové mapové aplikace. Zároveň jsou výsledky dostupné na webových stránkách, kde se nachází nejen výstupy, ale také stručná historie měst a~vytvořená srovnávací fotodokumentace.
 
 
 
@@ -1154,15 +1155,37 @@ Výsledky ze softwaru CityEngine, ArcMap a ArcGIS Pro byly publikovány na serve
 \begin{figure}
 	\dirtree{%
 		.1 readme.txt\DTcomment{stručný popis obsahu CD}.
-	% 	
 		.1 odkazy.txt\DTcomment{Odkazy na webové stránky výstupů}.
 		.1 3D\_model\DTcomment{složka obsahující 3D model a video}.
-		.1 fotografie\DTcomment{vybrané historické fotografie}.
 		.1 LaTex\DTcomment{zdrojová forma práce ve formátu \LaTeX{}}.	
 		.1 mapy\DTcomment{složka obsahující vytvořené mapy}.
 		.1 text\DTcomment{text práce}.
 		.2 DP\_Pasovska\_Petra\_2019\DTcomment{text práce v PDF}.	
 	}
 \end{figure}
+
+
+\chapter{Tematické mapy}
+
+\begin{enumerate}
+\item [C.1] Strakonice – Císařské povinné otisky map stabilního katastru
+\item [C.2] Strakonice – II. vojenské mapování
+\item [C.3] Strakonice – Ortofoto
+\item [C.4] Strakonice – Státní mapa 1 : 5 000 – odvozená
+\item [C.5] Horažďovice – Císařské povinné otisky map stabilního katastru
+\item [C.6] Horažďovice – II. vojenské mapování
+\item [C.7] Horažďovice – Ortofoto
+\item [C.8] Horažďovice – Státní mapa 1 : 5 000 – odvozená
+\item [C.9] Katovice – II. vojenské mapování
+\item [C.10] Katovice – Císařské povinné otisky map stabilního katastru
+\item [C.11] Katovice – Ortofoto
+\item [C.12] Katovice – Státní mapa 1 : 5 000 – odvozená
+\item [C.13] Kozlov, Střelské Hoštice – Císařské povinné otisky map stabilního katastru
+\item [C.14] Kozlov, Střelské Hoštice – II. vojenské mapování
+\item [C.15] Kozlov, Střelské Hoštice – Ortofoto
+\item [C.16] Kozlov, Střelské Hoštice – Státní mapa 1 : 5 000 – odvozená
+\item [C.17] Rozdíl vytvořeného modelu a DMR 5G
+\item [C.18] Digitální model terénu povodí Otavy
+\end{enumerate}
 
 \end{document}
