--- a/CD/LaTeX/mybibliographyfile.bib
+++ b/CD/LaTeX/mybibliographyfile.bib
@@ -127,8 +127,7 @@ url = "http://gisersqdai.top/mycv/files/201602.pdf?fbclid=IwAR0lZRlcIuBzxVbEEL6d
 author = "Rifaat Abdalla and C. Vincent Tao and Jonathan Li",
 year = {2006},
 title = {A GIS-supported 3D approach for flood risk assessment of the Qu'Appelle River, Southern Saskatchewan},
-url = "https://www.researchgate.net/publication/240295475_A_GIS-supported_3D_approach_for_flood_risk_assessment_of_
-the_Qu'Appelle_River_Southern_Saskatchewan/download"
+url = "http://tiny.cc/xyjo7y"
 }
 
 @book{terminy,
@@ -355,7 +354,7 @@ the_Qu'Appelle_River_Southern_Saskatchewan/download"
 
 @misc{malimankova,
   title = "Tvorba datového modelu Crigingerovy mapy v ArcGIS",
-  url = "http://maps.fsv.cvut.cz/diplomky/2008_BP_Malimankova_Tvorba_datoveho_modelu_Crigingerovy_mapy_v_ArcGIS.pdf",
+  url = "https://maps.fsv.cvut.cz/diplomky/2008/_BP_Malimankova_Tvorba_datoveho_modelu_Crigingerovy_mapy_v_ArcGIS.pdf",
   howpublished = "[online]",
   note = "[cit. 14.5.2019]",
 }
