--- a/text/DP_pasovska.tex
+++ b/text/DP_pasovska.tex
@@ -1167,9 +1167,24 @@ Výsledky ze softwaru CityEngine, ArcMap a ArcGIS Pro byly publikovány na serve
 \chapter{Tematické mapy}
 
 \begin{enumerate}
-\item [C.1] Skvělý
-\item [C.1] Skvělý
-\item [C.1] Skvělý
+\item [C.1] Strakonice – Císařské povinné otisky map stabilního katastru
+\item [C.2] Strakonice – II. vojenské mapování
+\item [C.3] Strakonice – Ortofoto
+\item [C.4] Strakonice – Státní mapa 1 : 5 000 – odvozená
+\item [C.5] Horažďovice – Císařské povinné otisky map stabilního katastru
+\item [C.6] Horažďovice – II. vojenské mapování
+\item [C.7] Horažďovice – Ortofoto
+\item [C.8] Horažďovice – Státní mapa 1 : 5 000 – odvozená
+\item [C.9] Katovice – II. vojenské mapování
+\item [C.10] Katovice – Císařské povinné otisky map stabilního katastru
+\item [C.11] Katovice – Ortofoto
+\item [C.12] Katovice – Státní mapa 1 : 5 000 – odvozená
+\item [C.13] Kozlov, Střelské Hoštice – Císařské povinné otisky map stabilního katastru
+\item [C.14] Kozlov, Střelské Hoštice – II. vojenské mapování
+\item [C.15] Kozlov, Střelské Hoštice – Ortofoto
+\item [C.16] Kozlov, Střelské Hoštice – Státní mapa 1 : 5 000 – odvozená
+\item [C.17] Rozdíl vytvořeného modelu a DMR 5G
+\item [C.18] Digitální model terénu povodí Otavy
 \end{enumerate}
 
 \end{document}
